[tool.poetry]
name = "xdc-rest-api-module"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "xdc_rest_api_module"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
